--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_DOMAIN=localhost
+APP_DOMAIN=0.0.0.0
 APP_PORT=5000
-APP_ENVIRONMENT=development
+APP_ENVIRONMENT=production
 APP_BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173"
 
 DB_USER=sentinel
