--- a/.env
+++ b/.env
@@ -7,6 +7,4 @@ DB_USER=sentinel
 DB_PASSWORD=12345678
 DB_PORT=27017
 DB_NAME=sentinel
-
-DB_ROOT_USER=root123
-DB_ROOT_PASSWORD=12345678
+DB_SERVER=localhost
