--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,35 +1,37 @@
-# Stage 0, "build-stage", based on Python 3.12.3.
-FROM python:3.12.3-alpine3.20 as build-stage
-
-WORKDIR /backend
-
-RUN apk add --no-cache curl
-RUN curl -sSL https://install.python-poetry.org | POETRY_HOME=/opt/poetry python && \
-    cd /usr/local/bin && \
-    ln -s /opt/poetry/bin/poetry && \
-    poetry config virtualenvs.create false
-
-ENV PATH="/root/.local/bin:$PATH"
-
-COPY ./pyproject.toml ./poetry.lock* ./
-
-ARG INSTALL_DEV=false
-RUN if [ "$INSTALL_DEV" = "true" ]; then poetry install --no-root; else poetry install --no-root --only main; fi
-
-# Stage 1, Final stage, to have only the compiled dependencies.
 FROM python:3.12.3-alpine3.20
 
-LABEL maintainer="Shahar Band <shahar1531@gmail.com>"
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /backend
 
-COPY --from=build-stage /usr/local/lib/python3.12/site-packages/ /usr/local/lib/python3.12/site-packages/
-COPY src/ ./src
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:0.4.15 /uv /bin/uv
 
-RUN adduser -D appuser
-RUN chown appuser /backend
+# Optimizing UV
+ENV PATH="/backend/.venv/bin:$PATH"
+ENV UV_COMPILE_BYTECODE=1
+ENV UV_LINK_MODE=copy
+
+# Install dependencies
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    uv sync --frozen --no-install-project --no-editable
+
+# Copy the necessary files
+COPY pyproject.toml uv.lock ./
+COPY src/ ./src/
+# COPY tests/ ./tests/
+
+# Sync the project
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#intermediate-layers
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync
+
+RUN adduser -D appuser && chown -R appuser /backend
 USER appuser
 
-ENV PYTHONPATH="/backend"
+ENV PYTHONPATH=/backend
 
-CMD ["python", "src/main.py"]
+CMD ["uv", "run", "/backend/src/main.py"]
+
