--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
 
 [tool.uv]
 dev-dependencies = [
+    "pytest-asyncio>=0.24.0",
     "pytest<9.0.0,>=7.4.3",
     "ruff<1.0.0,>=0.6.9",
 ]
